# parallel-compute-language-mvp

./: .gitignore  CMakeLists.txt  README.md  atomic_counter  build_gojo_package.sh  gojo
docs/: proposal-parallel-executor.md  proposal-runtime-interface.md
docs/adr/: distributed-scheduling.md
docs/arc/: ADR-0001.md  sequence.puml
docs/arc/adr/: ADR-0001.md  ADR-0001A.md  ADR-0002.md  ADR-0003.md  ADR-0004.md
docs/arc/c4/: components.puml  containers.puml  context.puml
examples/: quicksort.gojo  quicksort_better.gojo  quicksort_with_arrays.gojo  simple.gojo
parser/: CMakeLists.txt  README.md  TLexer.g4  TParser.g4  gen_parser.sh  main.cpp
parser/antlr4_runtime/: CMakeLists.txt
parser/tests/: atomic_counter.lang  gen_example.cpp  out.txt
parser/visitor/: stackframe.cpp  stackframe.h  visitor.cpp  visitor.h
runtime/reactor/: CMakeCache.txt  CMakeLists.txt  Makefile  README_TYPE_SYSTEM.md
runtime/reactor/common/: CMakeLists.txt  helpers.hpp  interface.cpp  interface.hpp  logging.hpp  type_system.cpp  type_system.hpp
runtime/reactor/distributed/: CMakeLists.txt  config.cpp  config.hpp  redis_client.cpp  redis_client.hpp  repository.cpp  repository.hpp
runtime/reactor/distributed/redis_scripts/: _make_headers.py  commit.lua  get_attributes.lua  new_channel.lua  new_exec_queue.lua  push.lua  schedule.lua
runtime/reactor/distributed/redis_scripts/_headers/: _scripts.hpp  commit_lua.hpp  get_attributes_lua.hpp  new_channel_lua.hpp  new_exec_queue_lua.hpp  push_lua.hpp  schedule_lua.hpp
runtime/reactor/parallel/: CMakeLists.txt  repository.cpp  repository.hpp
runtime/reactor/src/: CMakeLists.txt  Makefile  cycle_impl.cpp  cycle_impl.hpp  interface.cpp  interface.hpp  logging.hpp  type_system.cpp  type_system.hpp
runtime/reactor/tests/: .gitignore  CMakeLists.txt  Makefile  test_cycle.cpp  test_type_system_extended.cpp
tests/: atomic_counter.lang
tests/runtime/reactor/: CMakeLists.txt  manual_test_type_system.cpp  test_cycle.cpp  test_distributed_config.cpp  test_distributed_redis_client.cpp  test_type_system_extended.cpp  test_types.cpp
